# tactix

./: .coveragerc  .flake8  .gitignore  .pre-commit-config.yaml  .safety-policy.yml  Cargo.toml  Makefile  NEW_INSTRUCTIONS_PLEASE_READ_ASAP.md  NOTES  README.md  SUPERCEDED_README.md  SUPERCEDED_feature_list.json  app-progress.txt  app-spec.txt  claude-progress.txt  compose.yml  design-principles.md  feature_list.json  init.sh  initializer-prompt.md  newer_features_in_progress.json  potential-python-consolidation.md  pyproject.toml  pytest.ini  test_fixtures.csv  tmp_check_mate_override.py  tmp_debug_bishop.py  tmp_debug_bishop_out.txt  tmp_debug_correspondence_infer.py  tmp_debug_fork.py  tmp_debug_hanging_correspondence.py  tmp_debug_mate_fixture.py  tmp_debug_mate_info.py  tmp_debug_matein1_capture.py  tmp_debug_motif.py  tmp_debug_motif_output.txt  tmp_debug_pipeline.py  tmp_debug_pipeline.txt  tmp_find_hanging.py  tmp_query_moves.py
.cargo/: config.toml
airflow/: airflow.cfg  webserver_config.py
client/: .prettierrc  NOTICE.md  eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docker/: airflow.Dockerfile  client.Dockerfile  compose.yml  server.Dockerfile
review-for-deletion/: ANALYSIS_SCHEMA.py  CLOCK_PARTS_FULL.py  CLOCK_PARTS_SHORT.py  DailySyncCompleteContext.py  DailySyncPayloadContext.py  DailySyncStartContext.py  DashboardQueryFilters.py  FetchProgressContext.py  FetchProgressContext_1.py  FetchProgressContext_2.py  NoGamesAfterDedupeContext.py  NoGamesAfterDedupePayloadContext.py  NoGamesContext.py  NoGamesPayloadContext.py  NoGamesPayloadContext_1.py  PGN_SCHEMA.py  PostgresStatus.py  PostgresStore.py  ProgressCallback.py  SITE_PATTERNS.py  TacticsSearchFilters.py  _hash_pgn_text.py  base_db_store.py  const.py  context_exports.py  dashboard.py  event_stream__job_stream.py  lichess_client.py  mock_db_store.py  no_games_after_dedupe_payload_context.py  no_games_after_dedupe_payload_context_1.py  no_games_payload_context.py  pipeline_state__pipeline.py  position_extractor.py  postgres_store_impl.py  queue_job_event__job_stream.py  run_stream_job__job_stream.py  stockfish_engine.py  stream_job_by_id.py  stream_job_worker__job_stream.py  (+8 more)
src/: lib.rs
tests/: conftest.py  conversion_test_helpers.py  fixture_helpers.py  http_fakes.py  test_airflow_client.py  test_airflow_dag.py  test_airflow_dag_helpers.py  test_airflow_metadata_postgres.py  test_analysis_resume_inputs.py  test_analyze_position_post_move_helpers.py  test_analyze_tactics_helpers.py  test_api_auth.py  test_api_chesscom_bullet_dashboard_practice_2026_02_01.py  test_api_chesscom_bullet_pipeline_canonical.py  test_api_chesscom_bullet_pipeline_regression.py  test_api_dashboard_cache.py  test_api_helpers.py  test_api_jobs.py  test_api_jobs_helpers.py  test_api_lichess_blitz_pipeline_regression.py  test_api_lichess_cursor_incremental.py  test_api_practice.py  test_api_profile.py  test_api_stats_motifs.py  test_api_tactics_search.py  test_apply_engine_options.py  test_base_chess_client.py  test_base_db_store.py  test_base_tactic_detector_helpers.py  test_chess_enums_helpers.py  test_chesscom_bullet_pipeline_2026_02_01.py  test_chesscom_client.py  test_config_env.py  test_config_field_value.py  test_config_helpers.py  test_constants.py  test_context_and_streaming_modules.py  test_conversion_captured_target.py  test_conversion_non_converting_move.py  test_conversion_played_mate_line.py  (+128 more)
tmp-logs/: _seed_helpers.py  analysis_feature_155_find_move.py  debug_all_moves_hanging.py  debug_candidate_bishop_blunders.py  debug_hanging_piece_diagnose.py  debug_hanging_piece_search.py  debug_hanging_sequence.py  debug_identify_hanging_moves.py  debug_loss_hanging.py  feature_007_lichess_blitz_output.json  feature_007_lichess_blitz_verification.py  feature_008_chesscom_bullet_idempotent.json  feature_008_idempotency_check.py  feature_010_lichess_blitz_output.json  feature_010_lichess_blitz_verification.py  feature_087_seed.py  feature_096_seed.py  feature_122_seed.py  feature_123_seed.py  feature_124_seed.py  feature_125_seed.py  feature_126_seed.py  feature_128_seed.py  feature_131_seed.py  feature_132_seed.py  feature_133_seed.py  feature_134_seed.py  feature_135_seed.py  feature_136_seed.py  feature_137_seed.py  feature_139_seed.py  feature_140_seed.py  feature_142_seed.py  feature_143_seed.py  feature_144_seed.py  feature_145_seed.py  feature_149_seed.py  feature_150_seed_blitz.py  feature_151_seed_rapid_case.py  feature_152_seed_classical.py  (+70 more)
tmp4yfimtu0/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmp55kc95x_/: mate_in_one_rapid_failed_attempt.duckdb
tmp5hn7zq8a/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmp5xnntc7b/: tactix_chesscom_2026_02_01.duckdb
tmp7avym3kd/: mate_in_two_blitz_failed_attempt.duckdb
tmp7lwox5b_/: tactix_chesscom_2026_02_01.duckdb
tmp8zuleieq/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmp_9zh9jy1/: tactix_chesscom_2026_02_01.duckdb
tmp_c_z_1f5/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmpadaabm9d/: tactix_chesscom_2026_02_01.duckdb
tmpalltieuu/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmpd9q83124/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmpdo_08dio/: tactix_chesscom_2026_02_01.duckdb
tmpf5j38s29/: mate_in_one_rapid_failed_attempt.duckdb
tmphlcvz__k/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmphm73ym82/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmpllqd7_bi/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmpp31xvmoy/: mate_in_one_rapid_missed.duckdb
tmpp_bxkwk7/: tactix_chesscom_2026_02_01.duckdb
tmppr0t_8wu/: mate_in_two_blitz_failed_attempt.duckdb
tmpqird9wf_/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
tmpw7ldumm6/: mate_in_two_blitz_missed.duckdb
tmpws5v0k7w/: tactix.duckdb  tactix_feature_pipeline_validation_2026_02_01.duckdb
(+1296 files in other folders)
