
[project]
dependencies=[
    "apache-airflow==2.10.0",
    "berserk>=0.13.0",
    "duckdb>=1.4.3",
    "fastapi>=0.115.0",
    "orjson>=3.10.7",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.9",
    "pydantic>=2.9.0",
    "python-chess>=1.999",
    "python-dotenv>=1.2.1",
    "requests>=2.32.3",
    "tenacity>=9.0.0",
    "uvicorn>=0.31.0",
]
description="Tactics analysis pipeline for personal chess training"
name="tactix"
readme="README.md"
requires-python=">=3.12,<3.13"
version="0.1.0"

    [project.optional-dependencies]
    dev=["pytest>=9.0.2"]

    [project.scripts]
    tactix="tactix:main"

[tool.maturin]
module-name    ="tactix._core"
python-packages=["tactix"]
python-source  ="src"

[tool.uv]
cache-keys=[
    { file="Cargo.lock" },
    { file="Cargo.toml" },
    { file="pyproject.toml" },
    { file="src/**/*.rs" },
]

[build-system]
build-backend="maturin"
requires     =["maturin>=1.0,<2.0"]

[dependency-groups]
dev=[
    "pylint>=4.0.4",
    "pytest-cov>=7.0.0",
    "pytest>=9.0.2",
    "ruff>=0.14.14",
    "ty>=0.0.13",
    "vulture>=2.14",
    "xenon>=0.9.3",
]

[tool.ruff]
extend-exclude=[".venv", "build", "client", "dist"]
line-length   =100
target-version="py312"

    [tool.ruff.format]
    indent-style             ="space"
    line-ending              ="lf"
    quote-style              ="double"
    skip-magic-trailing-comma=false

    [tool.ruff.lint]
    # A “strict but practical” set.
    select=[
        "ARG",  # unused arguments
        "B",    # bugbear
        "C4",   # flake8-comprehensions
        "DTZ",  # naive datetime traps
        "E",
        "F",    # pyflakes
        "I",    # isort
        "PERF", # performance pitfalls
        "PIE",  # misc cleanups
        "PL",   # pylint-derived rules (complexity-ish + code quality)
        "RET",  # return-related cleanliness
        "RUF",  # ruff-specific rules
        "S",    # bandit (security-ish)
        "SIM",  # flake8-simplify
        "TRY",  # exception anti-patterns
        "UP",   # pyupgrade
        "W",    # pycodestyle
    ]

    ignore=[
        "PLR0913", # "too many args" (enable later if you want)
        "S101",    # allow assert (pytest uses it)
        "TRY003",  # long exception messages (can be noisy)
    ]

    fixable  =["ALL"]
    unfixable=["F401"] # avoid auto-removing imports in ambiguous cases

        [tool.ruff.lint.mccabe]
        max-complexity=10

        [tool.ruff.lint.pylint]
        # These hit the “giant function” problem agents create.
        max-branches  =10
        max-returns   =5
        max-statements=20

        [tool.ruff.lint.per-file-ignores]
        "src/**/__init__.py"=["F401"] # re-exports
        "tests/**"=[
            "PLR2004", # magic values in tests are fine
            "S101",    # asserts in tests
        ]

        [tool.ruff.lint.isort]
        known-first-party=["src"]
